<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/border"
    android:layout_gravity="center">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/dark_blue_3"
        android:orientation="horizontal"
        android:gravity="right"
        android:padding="4dp">

        <TextView
            android:id="@+id/closeBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:drawableEndCompat="@drawable/cancel2"
            android:layout_gravity="center_vertical"
            />


    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_password"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:textSize="20sp"
        android:textColor="@color/red"
        android:textStyle="bold"/>


    <EditText
        android:id="@+id/passwordEt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="10dp"
        android:gravity="start"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/note_enter_password"
        android:layout_gravity="start"
        android:layout_marginBottom="10dp"
        android:layout_marginHorizontal="10dp"
        android:textColor="@color/layer1"
        android:gravity="start"/>

    <Button
        android:id="@+id/okBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ok"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="5dp"/>

</LinearLayout>