<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/black_border">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/required_quantity"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="17dp"
        android:textSize="18sp"
        android:fontFamily="@font/poppins_semibold_600"
        android:textColor="@color/gray"/>

    <EditText
        android:id="@+id/qtyEdt"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:text="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title"
        app:layout_constraintWidth_percent="0.35"
        android:gravity="center"
        android:background="@drawable/black_border"
        android:layout_marginTop="15dp"
        android:selectAllOnFocus="true"
        android:inputType="number"
        android:maxLines="1"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/confirmBtn"
        android:layout_width="wrap_content"
        android:layout_height="38dp"
        android:text="@string/confirm_title"
        android:textAllCaps="false"
        app:layout_constraintTop_toBottomOf="@+id/qtyEdt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="30dp"
        app:layout_constraintEnd_toStartOf="@+id/cancelBtn"
        android:layout_marginBottom="20dp"
        android:background="@drawable/loginbtn"
        android:textColor="@color/white"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/cancelBtn"
        android:layout_width="wrap_content"
        android:layout_height="38dp"
        android:text="@string/cancel"
        android:textAllCaps="false"
        app:layout_constraintTop_toTopOf="@+id/confirmBtn"
        app:layout_constraintStart_toEndOf="@+id/confirmBtn"
        app:layout_constraintBottom_toBottomOf="@id/confirmBtn"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/cancel_button"
        />


</androidx.constraintlayout.widget.ConstraintLayout>