<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@drawable/black_border"
    android:elevation="5dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:padding="2dp">

        <TextView
            android:id="@+id/icClose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:elevation="10dp"
            android:focusable="true"
            android:shadowRadius="5"
            app:drawableEndCompat="@drawable/ic_close2"
            app:drawableTint="@color/black" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        >

        <TextView
            android:id="@+id/tvItemName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="25dp"
            android:gravity="center"
            android:text="@string/Itemname"
            android:textColor="@color/gray"
            android:textSize="16sp"
            android:fontFamily="@font/poppins_semibold_600"
            android:layout_weight="1"/>

        <TextView
            android:layout_width="2dp"
            android:layout_height="match_parent"
            android:background="@color/lightOrange" />

        <TextView
            android:id="@+id/tvItemCode"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:gravity="center"
            android:text="@string/itemCode"
            android:textColor="@color/gray"
            android:textSize="16sp"
            android:fontFamily="@font/poppins_semibold_600"
            android:layout_weight="1"/>


    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:orientation="horizontal"
        android:padding="7dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="4dp"
            android:text="@string/serial_no"
            android:textColor="@color/black"
            android:textSize="17sp"
            android:fontFamily="@font/poppins_semibold_600"
            />

        <EditText
            android:id="@+id/etSerial"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginVertical="2dp"
            android:layout_weight="1.5"
            android:background="@drawable/back_border_edit"
            android:imeOptions="actionDone|actionNext|actionSend|actionGo|actionSearch"
            android:selectAllOnFocus="true"
            android:textAlignment="center"
            android:textColor="#D88F8F8F"
            android:textCursorDrawable="@color/colorPrimary"
            android:layout_marginStart="4dp"/>

        <TextView
            android:id="@+id/icScan"
            android:layout_width="37dp"
            android:layout_height="37dp"
            android:layout_marginHorizontal="8dp"
            android:background="@drawable/ic_scan_black_24dp"
            android:gravity="center"
            />


        <TextView
            android:id="@+id/icEdit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_edit"
            android:gravity="center"
            android:backgroundTint="@color/black"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="2dp"
        android:layout_marginTop="10dp"
        android:background="@color/lightOrange"
        android:orientation="horizontal"
        android:padding="7dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/serial_no"
            android:textColor="@color/black"
            android:textSize="16sp"
            />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.15"
            android:gravity="center">

            <TextView
                android:id="@+id/icDeleteAll"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:paddingHorizontal="10dp"
                android:textSize="18sp"
                android:visibility="visible"
                app:drawableStartCompat="@drawable/ic_delete_all"
                android:drawableTint="@color/black"/>
        </LinearLayout>


        <!--        <TextView-->
        <!--            android:layout_width="wrap_content"-->
        <!--            android:layout_height="wrap_content"-->
        <!--            android:layout_weight="1"-->
        <!--            android:gravity="center"-->
        <!--            android:text="@string/Qty"-->
        <!--            android:textColor="@color/white"-->
        <!--            android:textSize="16sp"-->
        <!--            android:textStyle="bold" />-->

        <!--        <TextView-->
        <!--            android:layout_width="2dp"-->
        <!--            android:layout_height="match_parent"-->
        <!--            android:background="@color/colorblue1"-->
        <!--            android:gravity="center"-->
        <!--            android:textSize="12sp"-->
        <!--            android:textStyle="bold" />-->

        <!--        <TextView-->
        <!--            android:layout_width="wrap_content"-->
        <!--            android:layout_height="wrap_content"-->
        <!--            android:layout_weight="1"-->
        <!--            android:gravity="center"-->
        <!--            android:text="@string/TransferNo"-->
        <!--            android:textColor="@color/white"-->
        <!--            android:textSize="16sp"-->
        <!--            android:textStyle="bold" />-->

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvSerialTransfers"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginBottom="9dp" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginEnd="14dp"
            android:text="@string/total_qty"
            android:textColor="@color/gray"
            android:fontFamily="@font/poppins_semibold_600"
             />

        <TextView
            android:id="@+id/tvTotal"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/back_border_edit"
            android:gravity="center"
            android:padding="3dp"
            android:text="0" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginVertical="15dp"
        android:gravity="center">

        <Button
            android:id="@+id/btnAdd"
            android:layout_width="wrap_content"
            android:layout_height="37dp"
            android:background="@drawable/loginbtn"
            android:gravity="center"
            android:text="@string/add" />

    </LinearLayout>

</LinearLayout>